syntax = "proto3";

package location;

service LocationService {
    rpc GetLocationsByOrganizationId(OrganizationIdRequest) returns (LocationResponse) {}
    rpc CreateLocation(CreateLocationRequest) returns (LocationResponse) {}
    rpc UpdateLocation(UpdateLocationRequest) returns (LocationResponse) {}
    rpc DeleteLocation(LocationIdRequest) returns (google.protobuf.Empty) {}
}

message OrganizationIdRequest {
    int32 organizationId = 1;
}

message CreateLocationRequest {
    string address = 1;
    string city = 2;
    string state = 3;
    string country = 4;
    string zipCode = 5;
    double latitude = 6;
    double longitude = 7;
    int32 organizationId = 8;
    bool useGeocoding = 9;
}

message UpdateLocationRequest {
    string id = 1;
    string address = 2;
    string city = 3;
    string state = 4;
    string country = 5;
    string zipCode = 6;
    double latitude = 7;
    double longitude = 8;
}

message LocationIdRequest {
    int32 locationId = 1;
}

message LocationResponse {
    repeated GrpcLocation locations = 1;
}

message GrpcLocation {
    int32 id = 1;
    string address = 2;
    string city = 3;
    string state = 4;
    string country = 5;
    string zipCode = 6;
    double latitude = 7;
    double longitude = 8;
    int32 organizationId = 9;
}

import "google/protobuf/empty.proto";